--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -99,7 +99,6 @@
 .card-fan-section-wrapper {
   border-top: 1px solid rgba(250, 204, 21, 0.05);
   border-bottom: 1px solid rgba(250, 204, 21, 0.05);
-  overflow-x: clip;
   width: 100%;
 }
 
